--- a/index.html
+++ b/index.html
@@ -9,29 +9,103 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!--link google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700;800&display=swap" rel="stylesheet">
+
+    <!--font awesome link-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <style>
         .font-family{
+            font-family: 'Manrope', sans-serif;
+            box-sizing: border-box;
 
         }
     </style>
 </head>
-<body>
+<body class="font-family">
     <!--header area-->
-    <header>
-        <div class="container mx-auto">
-            <nav>
-
-            </nav>
+    <header class=" box-border">
+        <div class="container mx-auto  bg-gradient-to-t from-[#DCFFB7] from-20% via-[#FF6868] via-40% to-[#FFBB64] to-300%">
+            <div class="hero py-4">
+                <div class="hero-content flex-col items-center lg:flex-row-reverse">
+                  <div class="w-full md:w-[50%] relative">
+                    <img src="images/banner.png" alt="banner">
+                    <div class="shadow-lg shadow-slate-950 w-[200px] md:w-[300px] h-[90px] md:h-[100px] flex items-center gap-11 absolute bottom-0 left-[30px] md:left-[74px] border border-purple-700 rounded-md cursor-pointer">
+                        <span class="text-2xl md:text-5xl"><i class="fa-regular fa-star"></i></span>
+                        <div class="md:space-y-4">
+                            <h2 class="text-xl md:text-3xl font-bold">5.00</h2>
+                        <p>Trust Pilot Ratings</p>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="w-full md:w-[50%]">
+                    <h1 class="text-7xl font-extrabold leading-tight bg-clip-text text-transparent bg-gradient-to-r from-[#F9F5F6] via-[#3498db]  to-[#2c3e50]">It's good 
+                        tea time at The Tea House</h1>
+                    <p class="py-6 text-lg font-light md:w-[70%]">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                    <button class="btn bg-gradient-to-t from-[#0652DD] text-white to-[#C4E538] hover:outline-double">Explore More <img src="images/arrow.png" alt="arrow"></button>
+                  </div>
+                </div>
+              </div>
         </div>
     </header>
 
     <!--main area-->
-    <main>
+    <main class="my-8">
+        <div class="container mx-auto">
+            <h1 class="text-4xl text-center font-bold py-3">Our Featured Products</h1>
+            <p class="md:w-[60%] text-base font-light mx-auto text-center leading-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <hr class="border-2 border-purple-500 my-2">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 my-6 gap-5">
+                <!--card 1-->
+                <div class="card shadow-xl bg-gradient-to-r from-[#C4E538] to-[#ED4C67] cursor-pointer hover:scale-105">
+                    <figure class="px-10 pt-10">
+                      <img src="images/tea-1.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title text-2xl font-bold">Milk Tea</h2>
+                        <p class="text-base font-semibold">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                 <!--card 1-->
+                 <div class="card shadow-xl bg-gradient-to-r from-[#C4E538] to-[#ED4C67] cursor-pointer hover:scale-105">
+                    <figure class="px-10 pt-10">
+                      <img src="images/tea-2.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title text-2xl font-bold">Milk Tea</h2>
+                        <p class="text-base font-semibold">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                 <!--card 1-->
+                 <div class="card shadow-xl bg-gradient-to-r from-[#C4E538] to-[#ED4C67] cursor-pointer hover:scale-105">
+                    <figure class="px-10 pt-10">
+                      <img src="images/tea-3.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title text-2xl font-bold">Milk Tea</h2>
+                        <p class="text-base font-semibold">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                 <!--card 1-->
+                 <div class="card shadow-xl bg-gradient-to-r from-[#C4E538] to-[#ED4C67] cursor-pointer hover:scale-105">
+                    <figure class="px-10 pt-10">
+                      <img src="images/tea-4.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title text-2xl font-bold">Milk Tea</h2>
+                        <p class="text-base font-semibold">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
     <!--footer area-->
     <footer>
-        
+
     </footer>
 </body>
 </html>
