--- a/index.html
+++ b/index.html
@@ -101,8 +101,33 @@
                 </div>
             </div>
         </div>
-
     </main>
+    <!--greate tea area-->
+    <section class="my-10">
+        <div class="container mx-auto">
+            <div class="flex flex-col md:flex-row gap-5 md:h-[600px]">
+                <div class="grid grid-rows-6 grid-cols-1 md:grid-cols-2 gap-4  w-full md:w-1/2">
+                    <div class="rounded-md cursor-pointer hover:bg-gradient-to-b hover:from-[black] hover:via-amber-500 hover:to-slate-100 shadow-lg shadow-gray-700 bg-gradient-to-r from-[#feca57] via-[#ffcccc] to-[#ff6b6b] row-span-2"></div>
+                    <div class="rounded-md cursor-pointer hover:bg-gradient-to-b hover:from-[black] hover:via-amber-500 hover:to-slate-100 shadow-lg shadow-gray-700 bg-gradient-to-r from-[#32ff7e] via-[#5f27cd] to-[#ff3838] row-span-4 flex items-center justify-center">
+                        <img src="images/fresh-1.png" alt="">
+                    </div>
+                    <div class="rounded-md cursor-pointer hover:bg-gradient-to-b hover:from-[black] hover:via-amber-500 hover:to-slate-100 shadow-lg shadow-gray-700 bg-gradient-to-r from-[#f368e0] via-[#fff200] to-[#222f3e]  row-span-4 flex items-center justify-center">
+                        <img src="images/fresh-2.png" alt="">
+                    </div>
+                    <div class="rounded-md cursor-pointer hover:bg-gradient-to-b hover:from-[black] hover:via-amber-500 hover:to-slate-100 shadow-lg shadow-gray-700 bg-gradient-to-r from-[#feca57] via-[#10ac84] to-[#ff6b6b] row-span-2 "></div>
+                </div>
+                <div class="w-full bg-gradient-to-br from-orange-600 via-lime-400 to-[#192a56] hover:bg-gradient-to-br hover:from-[#e84118] hover:via-[#00a8ff] hover:to-[#9c88ff] bg-clip-text text-transparent md:w-1/2 p-5 md:p-0">
+                    <h1 class="text-2xl  md:text-4xl font-bold py-6 ">Great Tea, Freshly Presented</h1>
+                    <p class="text-base md:text-xl leading-9 font-bold">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                    <h1 class="text-2xl  md:text-4xl font-bold py-6 ">Unique Taste</h1>
+                    <p class="text-base md:text-xl leading-9 font-bold">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <h1 class="text-2xl  md:text-4xl font-bold py-6 ">Premium Quality</h1>
+                    <p class="text-base md:text-xl leading-9 font-bold">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
     <!--footer area-->
     <footer>
 
