--- a/index.html
+++ b/index.html
@@ -125,7 +125,59 @@
                     <p class="text-base md:text-xl leading-9 font-bold">Premium Quality that makes tea more elegant and more durable when you use it.</p>
                 </div>
             </div>
+        </div>
+    </section>
 
+    <!--meet section-->
+    <section>
+        <div class="container mx-auto">
+            <div class="hero bg-gradient-to-r from-[#4cd137] via-[#f5f6fa] to-[#7f8fa6]">
+                <div class=" hero-content flex-col lg:flex-row-reverse">
+                  <div class="w-full md:w-1/2 relative py-5 space-y-5">
+                    <!--card =1 -->
+                    <div class="relative z-10 opacity-[0.4] bg-gradient-to-r from-[#4cd137] via-[#f5f6fa] to-[#7f8fa6] w-[80%] md:top-[44px] md:-right-[123px]  h-[170px] p-2">
+                        <div class="absolute -top-[30px] -left-[30px] w-[200px] h-[200px]  rounded-full">
+                            <img src="images/client.png" class="ring ring-green-400 rounded-full" alt="client">
+                        </div>
+                        <p class="text-xl font-bold indent-8">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h2 class="text-base font-bold">Ilham Yuda</h2>
+                        <p class="text-sm">Businessman</p>
+                        <div class="flex justify-end">
+                            <img src="images/circles.png" alt="circles">
+                        </div>
+                    </div>
+                       <!--card =2 -->
+                       <div class="relative bg-gradient-to-r from-[#4cd137] via-[#f5f6fa] to-[#7f8fa6] z-20  h-[170px] w-[80%]  p-2">
+                        <div class="absolute -top-[30px] -left-[30px] w-[200px] h-[200px]  rounded-full">
+                            <img src="images/client.png" class="ring ring-green-400 rounded-full" alt="client">
+                        </div>
+                        <p class="text-xl font-bold indent-8">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h2 class="text-base font-bold">Ilham Yuda</h2>
+                        <p class="text-sm">Businessman</p>
+                        <div class="flex justify-end">
+                            <img src="images/circles.png" alt="circles">
+                        </div>
+                    </div>
+                       <!--card =3 -->
+                       <div class="relative bg-gradient-to-r from-[#4cd137] via-[#f5f6fa] to-[#7f8fa6] z-10 opacity-[0.4] h-[170px] w-[80%] md:bottom-[44px] md:-right-[123px] p-2">
+                        <div class="absolute -top-[30px] -left-[30px] w-[200px] h-[200px]  rounded-full">
+                            <img src="images/client.png" class="ring ring-green-400 rounded-full" alt="client">
+                        </div>
+                        <p class="text-xl font-bold indent-8">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h2 class="text-base font-bold">Ilham Yuda</h2>
+                        <p class="text-sm">Businessman</p>
+                        <div class="flex justify-end">
+                            <img src="images/circles.png" alt="circles">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="w-full md:w-1/2">
+                    <h1 class="text-5xl font-bold">Meet Our Super Clients</h1>
+                    <p class="py-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                    <button class="btn btn-primary">Show All</button>
+                  </div>
+                </div>
+              </div>
         </div>
     </section>
     <!--footer area-->
