--- a/index.html
+++ b/index.html
@@ -180,9 +180,102 @@
               </div>
         </div>
     </section>
+
+    <!--News & Events area start-->
+    <section class="py-8">
+        <div class="container mx-auto">
+            <h1 class="text-center font-bold text-3xl">News & Events</h1>
+            <p class="text-center text-base md:w-[70%] mx-auto leading-7 py-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <hr class="border-2 border-purple-400  ">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-5 my-6">
+                <!--card--1-->
+                <div class="card bg-gradient-to-r p-2 from-[#4cd137] via-[#f5f6fa] to-[#7f8fa6] shadow-2xl shadow-gray-600 cursor-pointer hover:rotate-1">
+                    <figure><img src="images/news-1.png" alt="news-1" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title font-bold">
+                        Collecting 8 points for
+                        <div class="badge badge-secondary">discount</div>
+                      </h2>
+                      <p class="text-base font-normal">There are many variations of passages of Lorem Ipsum available.</p>
+                      <div class="card-actions">
+                        <div class="badge badge-outline bg-purple-500">Learn More</div> 
+                      </div>
+                    </div>
+                </div>
+
+                  <!--card--1-->
+                  <div class="card bg-gradient-to-r p-2 from-[#4cd137] via-[#f5f6fa] to-[#7f8fa6] shadow-2xl shadow-gray-600 cursor-pointer hover:rotate-1">
+                    <figure><img src="images/news-2.png" alt="news-1" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title font-bold">
+                        Collecting 8 points for
+                        <div class="badge badge-secondary">discount</div>
+                      </h2>
+                      <p class="text-base font-normal">There are many variations of passages of Lorem Ipsum available.</p>
+                      <div class="card-actions">
+                        <div class="badge badge-outline bg-purple-500">Learn More</div> 
+                      </div>
+                    </div>
+                </div>
+
+                  <!--card--1-->
+                  <div class="card bg-gradient-to-r p-2 from-[#4cd137] via-[#f5f6fa] to-[#7f8fa6] shadow-2xl shadow-gray-600 cursor-pointer hover:rotate-1">
+                    <figure><img src="images/news-3.png" alt="news-1" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title font-bold">
+                        Collecting 8 points for
+                        <div class="badge badge-secondary">discount</div>
+                      </h2>
+                      <p class="text-base font-normal">There are many variations of passages of Lorem Ipsum available.</p>
+                      <div class="card-actions">
+                        <div class="badge badge-outline bg-purple-500">Learn More</div> 
+                      </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
     <!--footer area-->
     <footer>
-
-    </footer>
+        <div class="flex flex-col md:flex-row justify-between items-center container mx-auto">
+            <div>
+                <a href=""><img src="images/cup.png" alt="cup"></a>
+            </div>
+            <div class="flex items-center gap-5"> 
+                <h1 class="text-xl">Ready to get strated?</h1>
+                <button class="btn bg-gradient-to-t from-[#0652DD] text-white to-[#C4E538] hover:outline-double">Ready to get strated? <img src="images/arrow.png" alt="arrow"></button>
+            </div>
+        </div>
+      <div class="footer p-10 bg-gradient-to-br from-orange-600 via-lime-400 to-[#192a56] hover:bg-gradient-to-br hover:from-[#e84118] hover:via-[#00a8ff] hover:to-[#9c88ff] bg-clip-text text-transparent text-base-content">
+        <aside>
+            <header class="footer-title text-xl">Quick Links</header>
+            <a>Home</a>
+            <a>About Us</a>
+            <a href="">Insurance</a>
+            <a href="">Privacy Policy</a>
+          </aside> 
+          <nav>
+            <header class="footer-title text-xl">Our Service</header> 
+            <a class="link link-hover">Life Insurance</a>
+            <a class="link link-hover">Car Insurance</a>
+            <a class="link link-hover">Health Insurance</a>
+            <a class="link link-hover">House Insurance</a>
+          </nav> 
+          <nav>
+            <header class="footer-title text-xl">Help</header> 
+            <a class="link link-hover">FAQs</a>
+            <a class="link link-hover">Contact Us</a>
+          </nav> 
+          <nav>
+            <header class="footer-title text-xl">Subscribe to our newsletter</header> 
+            <input type="email" class="border-t-0 border-l-0 border-r-0 border-b-2 border-black bg-transparent p-2 text-lx outline-none" name="" placeholder="Email address" id="">
+            <div class="flex gap-5">
+              <a class="link link-hover text-2xl"><i class="fa-brands fa-facebook"></i></a>
+              <a class="link link-hover text-2xl"><i class="fa-brands fa-twitter"></i></a>
+            </div>
+          </nav>
+      </div>
+      </footer>
 </body>
 </html>
