--- a/index.html
+++ b/index.html
@@ -237,17 +237,17 @@
         </div>
     </section>
     <!--footer area-->
-    <footer>
-        <div class="flex flex-col md:flex-row justify-between items-center container mx-auto">
+    <footer class="border-2 border-black  py-5 bg-gray-500">
+        <div class="flex flex-col md:flex-row space-y-5 md:space-y-0 justify-between items-center container mx-auto">
             <div>
                 <a href=""><img src="images/cup.png" alt="cup"></a>
             </div>
             <div class="flex items-center gap-5"> 
-                <h1 class="text-xl">Ready to get strated?</h1>
+                <h1 class="text-xl font-bold" >Ready to get strated?</h1>
                 <button class="btn bg-gradient-to-t from-[#0652DD] text-white to-[#C4E538] hover:outline-double">Ready to get strated? <img src="images/arrow.png" alt="arrow"></button>
             </div>
         </div>
-      <div class="footer p-10 bg-gradient-to-br from-orange-600 via-lime-400 to-[#192a56] hover:bg-gradient-to-br hover:from-[#e84118] hover:via-[#00a8ff] hover:to-[#9c88ff] bg-clip-text text-transparent text-base-content">
+      <div class="footer p-10 bg-gradient-to-br from-orange-600 via-lime-400 to-[#192a56] hover:bg-gradient-to-br hover:from-[#000000] hover:via-[#00a8ff] hover:to-[#9c88ff] bg-clip-text text-transparent text-base-content">
         <aside>
             <header class="footer-title text-xl">Quick Links</header>
             <a>Home</a>
@@ -269,12 +269,15 @@
           </nav> 
           <nav>
             <header class="footer-title text-xl">Subscribe to our newsletter</header> 
-            <input type="email" class="border-t-0 border-l-0 border-r-0 border-b-2 border-black bg-transparent p-2 text-lx outline-none" name="" placeholder="Email address" id="">
+            <input type="email" class="border-t-0 border-l-0 border-r-0 border-b-2 border-black bg-transparent p-2 text-lx outline-none text-red-50" name="" placeholder="Email address" id="">
             <div class="flex gap-5">
               <a class="link link-hover text-2xl"><i class="fa-brands fa-facebook"></i></a>
               <a class="link link-hover text-2xl"><i class="fa-brands fa-twitter"></i></a>
             </div>
           </nav>
+      </div>
+      <div class="flex justify-center  bg-gradient-to-br from-orange-600 via-lime-400 to-[#192a56] bg-clip-text text-transparent">
+        <p>© 2027 UIDesign.to - All rights reserved.</p>
       </div>
       </footer>
 </body>
