tea house complated

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class=" hero-content flex-col lg:flex-row-reverse">
                   <div class="w-full md:w-1/2 relative py-5 space-y-5">
                     <!--card =1 -->
-                    <div class="relative z-10 opacity-[0.4] bg-gradient-to-r from-[#4cd137] via-[#f5f6fa] to-[#7f8fa6] w-[80%] md:top-[44px] md:-right-[123px]  h-[170px] p-2">
+                    <div class="relative z-10 opacity-[0.4] bg-gradient-to-r from-[#4cd137] via-[#f5f6fa] to-[#7f8fa6] w-full md:w-[80%] md:top-[44px] md:-right-[123px]  h-[170px] p-2">
                         <div class="absolute -top-[30px] -left-[30px] w-[200px] h-[200px]  rounded-full">
                             <img src="images/client.png" class="ring ring-green-400 rounded-full" alt="client">
                         </div>
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                        <!--card =2 -->
-                       <div class="relative bg-gradient-to-r from-[#4cd137] via-[#f5f6fa] to-[#7f8fa6] z-20  h-[170px] w-[80%]  p-2">
+                       <div class="relative bg-gradient-to-r from-[#4cd137] via-[#f5f6fa] to-[#7f8fa6] z-20  h-[170px] w-full md:w-[80%]  p-2">
                         <div class="absolute -top-[30px] -left-[30px] w-[200px] h-[200px]  rounded-full">
                             <img src="images/client.png" class="ring ring-green-400 rounded-full" alt="client">
                         </div>
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                        <!--card =3 -->
-                       <div class="relative bg-gradient-to-r from-[#4cd137] via-[#f5f6fa] to-[#7f8fa6] z-10 opacity-[0.4] h-[170px] w-[80%] md:bottom-[44px] md:-right-[123px] p-2">
+                       <div class="relative bg-gradient-to-r from-[#4cd137] via-[#f5f6fa] to-[#7f8fa6] z-10 opacity-[0.4] h-[170px] w-full md:w-[80%] md:bottom-[44px] md:-right-[123px] p-2">
                         <div class="absolute -top-[30px] -left-[30px] w-[200px] h-[200px]  rounded-full">
                             <img src="images/client.png" class="ring ring-green-400 rounded-full" alt="client">
                         </div>
