done project is all ok

--- a/index.html
+++ b/index.html
@@ -249,26 +249,26 @@
         </div>
       <div class="footer p-10 bg-gradient-to-br from-orange-600 via-lime-400 to-[#192a56] hover:bg-gradient-to-br hover:from-[#000000] hover:via-[#00a8ff] hover:to-[#9c88ff] bg-clip-text text-transparent text-base-content">
         <aside>
-            <header class="footer-title text-xl opacity-0">Quick Links</header>
+            <header class=" font-bold text-xl">Quick Links</header>
             <a>Home</a>
             <a>About Us</a>
             <a href="">Insurance</a>
             <a href="">Privacy Policy</a>
           </aside> 
           <nav>
-            <header class="footer-title text-xl opacity-0">Our Service</header> 
+            <header class=" font-bold text-xl ">Our Service</header> 
             <a class="link link-hover">Life Insurance</a>
             <a class="link link-hover">Car Insurance</a>
             <a class="link link-hover">Health Insurance</a>
             <a class="link link-hover">House Insurance</a>
           </nav> 
           <nav>
-            <header class="footer-title text-xl opacity-0">Help</header> 
+            <header class="font-bold  text-xl">Help</header> 
             <a class="link link-hover">FAQs</a>
             <a class="link link-hover">Contact Us</a>
           </nav> 
           <nav>
-            <header class="footer-title text-xl opacity-0">Subscribe to our newsletter</header> 
+            <header class="font-bold  text-xl">Subscribe to our newsletter</header> 
             <input type="email" class="border-t-0 border-l-0 border-r-0 border-b-2 border-black bg-transparent p-2 text-lx outline-none text-red-50" name="" placeholder="Email address" id="">
             <div class="flex gap-5">
               <a class="link link-hover text-2xl"><i class="fa-brands fa-facebook"></i></a>
